--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,55 @@
 .hello-world-container {
-    background-color: var(--tertiary);
+    background-color: var(--quaternary);
+}
+
+.d-header {
+    box-shadow: none;
+    border-bottom: 1px solid var(--primary-low-mid);
+    height: 5em;
+    .d-icon {
+        color: var(--primary-low-mid);
+      }
+  }
+
+  .navigation-container {
+    .select-kit.combo-box {
+      .select-kit-header {
+        border-radius: .9em;
+        background-color: var(--header_background);
+      }
+    }
+  }
+
+  .navigation-container {
+	.select-kit.combo-box {
+		.select-kit-header {
+            border-radius: .9em;
+            background-color: var(--header_background);
+          }
+		&.category-drop,
+    &.tag-drop {
+      .select-kit-body {
+        .select-kit-filter {
+            border-top: 0px;
+          }
+        border-radius: .9em;
+        background-color: var(--header_background);
+  
+        .select-kit-collection {
+          background-color: var(--header_background);
+          border-top-left-radius: 0px;
+          border-top-right-radius: 0px;
+        }
+      }
+    }
+  }
+}
+
+.d-header {
+    background-color: var(--quaternary);
+    .panel {
+        background-color: var(--secondary);
+        border-radius: 15px;
+        padding: 5px;
+    }
 }
