--- a/javascripts/discourse/connectors/topic-above-post-stream/square.hbs
+++ b/javascripts/discourse/connectors/topic-above-post-stream/square.hbs
@@ -1,2 +1,6 @@
-<div style="height: 200px; width: 200px;background: red">
-    </div>
+<div>
+    <p style="color: blue;">
+        SOME TEXT BEFORE EACH POST
+        {{mount-widget widget="my-first-widget"}}
+    </p>
+</div>
