--- a/common/common.scss
+++ b/common/common.scss
@@ -26,23 +26,7 @@
     }
 }
 
-.default, .posts, .views, .activity {
-  display: none;
-}
-
-
-.topic-list {
-  width: 100%;
-  .topic-list-item {
-    float: left;
-    width: 33.3%;
-    height: 150px;
-    &:hover {
-      transition: transform .75s;
-      transform: translateX(5px);
-    }
-  }
-}
+// deleted the part that alters the default layout
 
 .nav-pills > li > a {
   transition: background .75s;
@@ -73,89 +57,3 @@
     background-color: var(--quaternary);
   }
 }
-
-// start
-
-$color1: #f5f8f2;
-$color2: #88b98f;
-
-.ToggleWrapper {
-    display: flex;
-    .ToggleTitleLight {
-        margin: auto;
-        padding: 10px;
-        font-weight: bold;
-        color:$color2;
-    }
-    .ToggleTitleDark {
-        margin: auto;
-        padding: 10px;
-        font-weight: bold;
-        color:black;
-    }
-}
-
-.switch {
-    margin:auto;
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-
-.switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: $color2;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 34px;
-    border-radius: 50%;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: $color1;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-input:checked + .slider {
-    background-color: black;
-}
-
-input:focus + .slider {
-    box-shadow: 0 0 1px black;
-}
-
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
-}
-
-// end
